added google analytics and optimize

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -27,6 +27,7 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-190163207-1', 'auto');
+    ga('require' 'OPT-5GZ4QKM');
     ga('send', 'pageview');
     </script>
     <!-- End Google Analytics -->
