added google optimize

--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -18,6 +18,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://www.googleoptimize.com/optimize.js?id=OPT-5GZ4QKM"></script>
     <script src="/js/bootstrap.min.js"></script>
       <!-- Google Analytics -->
     <script>
