--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,6 +13,7 @@
 	<script src="/js/bootstrap.min.js"></script>
 	<script src="/js/introHCI.js"></script>
 	<!-- Google Analytics -->
+	<script src="https://www.googleoptimize.com/optimize.js?id=OPT-5GZ4QKM"></script>
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
